--- a/user/view/default/user/index.html
+++ b/user/view/default/user/index.html
@@ -10,9 +10,9 @@
         <td class="td_bgc right_2">姓名：</td>
         <td class="td_bgc right_2">{{$user.name}}</td>
       </tr>
-      <tr>
-        <td class="td_bgc right_2">身份证：</td>
-        <td class="td_bgc right_2">{{$user.id}}</td>
+       <tr>
+        <td class="td_bgc right_2">登陆IP：</td>
+        <td class="td_bgc right_2">{{$login_ip}}</td>
       </tr>
 	  <tr>
         <td class="td_bgc right_2">电子邮件</td>
