--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -38,8 +38,16 @@ function check_register()
 		alert('用户名长度最小为3个字母');
 		return false;
 	}
-	if(reg.passwd.value.length<5){
+	if(reg.passwd.value.length<6){
 		alert('密码长度最小要6位');
+		return false;
+	}
+	if(reg.ids.value.length>18){
+		alert('身份证输入错误');
+		return false;
+	}
+	if(reg.ids.value.length<15){
+		alert('身份证输入错误');
 		return false;
 	}
 	if(reg.passwd.value!=reg.passwd2.value){
@@ -86,11 +94,13 @@ function check_register()
         </tr>
 	  <tr>
         <td class="td_bgc right_2">真实姓名:</td>
-        <td class="td_bgc right_2"><input name='name' type='text' id="tb_wid3"  value="" size="16"/></td>
-        </tr>
-	  <tr>
+        <td class="td_bgc right_2"><input name='name' type='text' id="tb_wid3"  value="" size="16"/><span class="color01 right"><font color="red">*</font></span>
+        </td>
+       </tr>
+	  <tr >
         <td class="td_bgc right_2">身份证:</td>
-        <td class="td_bgc right_2"><input type='text' name='id' id="tb_wid3" value="" /></td>
+        <td class="td_bgc right_2"><input type='text' name='ids' id="tb_wid3" value="" /><span class="color01 right"><font color="red">*</font></span>
+        </td>
         </tr>
 	  <tr>
          <td class="td_bgc td_hg" colspan="2" align="center"><input name="agree" type="checkbox" value="1">
