--- a/admin/view/default/left.html
+++ b/admin/view/default/left.html
@@ -53,7 +53,7 @@ function SwitchMenu(obj,sty)
 		<li><a href="?c=user&a=listUser" target='main'>用户查询</a></li>
 		<li><a href="?c=user&a=pageUsers" target='main'>用户列表</a></li>
 		
-		<li><a href="/user/frame.php?c=public&a=registerForm" target='main'>注册用户</a></li>	
+		<li><a href="/user/frame.php?c=public&a=registerForm&at=1" target='main'>注册用户</a></li>	
 	</ul>
 
 	<h1 id="m6" onClick="SwitchMenu('sub6','m6')" class="menu"><ol id="p6">
