--- a/user/view/default/frame/index.html
+++ b/user/view/default/frame/index.html
@@ -4,6 +4,7 @@
 <title>会员中心</title>
 <link href="css/style.css" rel="stylesheet" type="text/css"></link>
 </head>
+{{$ucsynclogin}}
 <frameset name="right" rows="64,9,*" cols="*" frameborder="no" border="0" framespacing="0">
 	<frame src="?c=frame&a=top" name="top" noresize="noresize" scrolling="no">
 	<frame src="?c=frame&a=controltop" name="controltop" noresize="noresize" scrolling="no">
