--- a/user/view/default/public/register.html
+++ b/user/view/default/public/register.html
@@ -66,7 +66,7 @@ function check_register()
 }
 </script>
 <div align="center">
-  <form  name='reg' action="?c=public&a=register" method='post'>
+  <form  name='reg' action="?c=public&a=register&at={{$at}}" method='post'>
 <div class="head_block tb_wid">&nbsp;注册用户</div>
 <div class="block tb_wid">
 <table id="table_2" cellpadding="0" cellspacing="1">
