修改vhms  head.html foot.html

--- a/user/view/default/public/foot.html
+++ b/user/view/default/public/foot.html
@@ -1,14 +1,35 @@
-<TABLE width="{{$width}}" border=0 align="center" cellPadding=3 cellSpacing=0>
-  <TBODY>
-  <TR>
+<div align="center">
+<div class="foot">
+   <div class="fl_le"><img src="/user{{$STATIC}}images/foot1.jpg"></div>
+   <div class="footmid">
+		<div class="wordlink">
+			 <table>
+				 <tr>
+					<td style="width: 70px;"><span>友情合作：</span></td>
+					<td>
+						<a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">kangle</a>|
+					</td>
+				 </tr>
+			 </table>
+			 <table 950>
+				 <tr>
+				 	<td align="center"><hr width="940"></td>
+				</tr>
+				<tr>
+					<td align="center">
+					  | 关于我们 
+					  | 广告服务
+					  | 付款方式 
+					  | 友情连接 
+					  | 
+					  <div align="center">Powered by JanBao vhs and <a href='http://www.kanglesoft.com/'>kangle</a></div>
+					</td>
+				 </tr>
+			 </table>
 
-    <TD >
-	<hr align="center"/>
-      <DIV align=center><SPAN class=bottom_font>
-	  | 关于我们 
-      | 广告服务
-      | 付款方式 
-      | 友情连接 
-      | 
-	  </SPAN></DIV>
-<div align="center">Powered by JanBao vhs and <a href='http://www.kanglesoft.com/'>kangle</a></div></TD></TR></TBODY></TABLE>
+         </div>
+   </div>
+   <div class="fl_ri"><img src="/user{{$STATIC}}images/foot2.jpg"></div>
+</div>
+</div>
+
