--- a/admin/view/default/vhostproduct/showProduct.html
+++ b/admin/view/default/vhostproduct/showProduct.html
@@ -32,34 +32,66 @@ function changeNode(id,templete)
 	var url='?c={{$smarty.request.c}}&a=ajaxChangeNode&id='+id + '&node=' + node + '&templete=' + templete;
 	xxkf_obj('busy'+id).innerHTML="<img src='{{$PSTATIC}}/style/busy.gif'/>";
 	xmlhttp2[id] = create_xmlhttp();	
-	xmlhttp2[id].open("GET",url,true);
+	xmlhttp2[id].open("GET",url,true);	
 	xmlhttp2[id].onreadystatechange=function (){
 		changeNodeResult(id);
 	};
 	xmlhttp2[id].send(null);
 }
-
+function updateView(id,product_id)
+{
+	xxkf_obj('updateView').innerHTML="";
+	var view=0;
+	if(document.getElementById(id).checked)
+	{
+		view=1;
+	}
+	var url='?c={{$smarty.request.c}}&a=ajaxUpdateProductView&id='+product_id+'&view='+view;
+	ajax_open_url2(url,updateViewResult);
+}
+function updateViewResult()
+{
+	var id='updateView';
+	try{
+	 if (xmlhttp2.readyState==4) {
+		if(xmlhttp2.status==200){	
+			//alert(xmlhttp2[id].responseText);	
+		 	var dataArray = xmlhttp2.responseXML.getElementsByTagName('result');
+		 	var ret = dataArray[0].getAttribute('ret');
+		 	xxkf_obj(id).innerHTML = "增加失败，请检查";
+		 	if(ret==1)
+		 	{
+		 		xxkf_obj(id).innerHTML = "增加失败，请检查";
+		 	}	 		
+		}
+	  }
+	}catch(e){
+		alert(e);
+	}
+}
 </script>
 <div id="container">
 <div class="padd mar_top">
-<div class="topimg pal1">共计 {{$sum}} 条记录</div>
 </div>
   <div id="main" class="wid"> 
-  <div align="left"> 
-  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
-  [<a href='?c=vhostproduct&a=flush'>更新配置文件</a>]
-  [<a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a>]
-  <select name='product_flag' onChange="javascript:product_form.submit();">
-  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
-  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
-  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
-  </select>
-  </form>
-  </div>
-    <table cellpadding=0 cellspacing=1 id="table">
-      <tr id="ttitle">
-          <td class='color01 right' bgcolor='#efefef'>操作</td>
-	   <td class='color01 right' bgcolor='#efefef' width="60">{{$lang.product_id}}</td>
+  		<div align="left"> 
+		  <form action='?c={{$smarty.request.c}}&a={{$smarty.request.a}}' method='post' name='product_form'>
+		  [<a href='?c=vhostproduct&a=flush'>更新配置文件</a>]
+		  [<a href="?c=vhostproduct&a=addProductForm" target='main'>增加产品</a>]
+		  <select name='product_flag' onChange="javascript:product_form.submit();">
+		  <option value='0' {{if $product_flag==0}}selected{{/if}}>所有产品</option>
+		  <option value='1' {{if $product_flag==1}}selected{{/if}}>暂停产品</option>
+		  <option value='2' {{if $product_flag==2}}selected{{/if}}>可销售产品</option>
+		  </select>
+		  <span id='updateView' color='red'></span>
+		  </form>
+  		</div>
+		<div class="topimg pal1" align='right'>共计 {{$sum}} 条记录</div>
+   		<table cellpadding=0 cellspacing=1 id="table">
+      	<tr id="ttitle">
+        <td class='color01 right' bgcolor='#efefef'>操作</td>
+        <td class='color01 right' bgcolor='#efefef'>前台显示</td>
+	   	<td class='color01 right' bgcolor='#efefef' width="60">产品ID</td>
         <td class='color01 right' bgcolor='#efefef'>产品名称</td>
         <td class='color01 right' bgcolor='#efefef'>主机</td>
 		<td class='color01 right' bgcolor='#efefef'>空间(M)</td>
@@ -75,16 +107,17 @@ function changeNode(id,templete)
         <td class="right">
         [<a href="javascript:if(confirm('确定删除{{$row.name}}?')){location='?c=vhostproduct&a=del&id={{$row.id}}';}" title="删除">删除</a>]
         [<a href="?c=vhostproduct&a=editProductForm&id={{$row.id}}">更改</a>]
+        <td class="right"><input type='checkbox' id='view{{$row.id}}' onClick="updateView(this.id,{{$row.id}})" name='view' value='{{$row.view}}' {{if $row.view==1}}checked{{/if}}></td>
         <td class="right">{{$row.id}}</td>
 		<td class="right">{{$row.name}}</td>
-				<td class="right">
+		<td class="right">
 			<select id='node{{$row.id}}' name='node' onChange="changeNode('{{$row.id}}','{{$row.templete}}')"">
-		{{foreach from=$nodes item=node}}
-		<option value='{{$node}}' {{if $row.node==$node}}selected{{/if}}>
-		{{$node}}
-		</option>
-		{{/foreach}}
-		</select>
+			{{foreach from=$nodes item=node}}
+			<option value='{{$node}}' {{if $row.node==$node}}selected{{/if}}>
+			{{$node}}
+			</option>
+			{{/foreach}}
+			</select>
 		<div id='busy{{$row.id}}'></div>
 		</td>
 		<td class="right">{{$row.web_quota}}</td>
@@ -103,8 +136,7 @@ function changeNode(id,templete)
       </tr>
 	  {{/foreach}}
     </table>
-    <div align="left">
-	</div>
+    <div align="left"></div>
   </div>
 </div>
 </body>
