--- a/user/view/default/style/style.css
+++ b/user/view/default/style/style.css
@@ -320,4 +320,4 @@ padding:5px;
 .color01 a {color: #fff;}
 .color01 a:visited {color: #fff;}
 .color01 a:hover {color: red;text-decoration: underline;}
-.color02 {#FF0000;}
+.color02 {color: #FF0000;}
