--- a/user/view/default/user/left.html
+++ b/user/view/default/user/left.html
@@ -32,6 +32,7 @@
 			</h1>
 			<ul class="submenu" id="sub6" >
 				<li><a href="?c=vhostproduct&a=pageVhostByuser" target="{{$target}}">我的虚拟主机</a></li>
+				<li><a href="?c=product&a=pageListProduct" target="{{$target}}">购买产品列表</a></li>
 				<li><a href="?c=question&a=pageByuser" target="{{$target}}">我的提问</a></li>
 			 </ul>
 		</div>
