修改前台界面

--- a/user/view/default/public/foot.html
+++ b/user/view/default/public/foot.html
@@ -3,18 +3,17 @@
    <div class="fl_le"><img src="/user{{$STATIC}}images/foot1.jpg"></div>
    <div class="footmid">
 		<div class="wordlink">
-			 <table>
+			 <table border="0" cellspacing="7" width="100%">
 				 <tr>
-					<td style="width: 70px;"><span>友情合作：</span></td>
-					<td>
-						<a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">kangle</a>|
+					<td bgcolor="#F7F4F1" class="right" valign="middle" height="40"><span>友情合作：</span>
+						<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">kangle</a></span>
+						<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">easypanel</a></span>
+						<span class="right"><a href="http://www.kanglesoft.com/" title="http://www.kanglesoft.com" target="_blank">vhms</a></span>
 					</td>
 				 </tr>
-			 </table>
-			 <table 950>
-				 <tr>
-				 	<td align="center"><hr width="940"></td>
-				</tr>
+			</table>
+      </div>
+			<table>
 				<tr>
 					<td align="center">
 					  | 关于我们 
@@ -24,10 +23,9 @@
 					  | 
 					  <div align="center">Powered by JanBao vhs and <a href='http://www.kanglesoft.com/'>kangle</a></div>
 					</td>
-				 </tr>
-			 </table>
+				</tr>
+			</table>
 
-         </div>
    </div>
    <div class="fl_ri"><img src="/user{{$STATIC}}images/foot2.jpg"></div>
 </div>
