--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -1,1 +1,92 @@
-首页面模板文件index.html
+<div>
+  <table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
+    <tr>
+      <td valign="top">
+	  <!--左部文件开始-->
+	  	<div class="left_main">
+			<!--公告代码开始-->
+			<div class="left_box bgcolor_left index_bg">
+				<div class="left_bg"></div>
+				<div class="left_top">
+					<table id="table_t" cellpadding="0" cellspacing="0">
+					    <tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+				  </table>
+				</div>
+			</div>
+			<!--公告代码结束-->
+			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<!--帮助代码开始-->
+			<div class="left_box bgcolor_left left_bg_help">
+				<div class="left_help_img"></div>
+				<div class="left_help_wid">
+					<table width="95%" border="0" cellpadding="0" cellspacing="0">
+					    <tr>
+							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box topimg">支付问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box topimg">支付问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+						</tr>
+					    <tr>
+							<td class="fontcolor"><div class="left_box topimg">支付问题</div></td><td>&nbsp;</td>
+							<td class="fontcolor"><div class="left_box topimg">域名相关问题</div></td>
+						</tr>
+				  </table>
+				</div>
+			</div>
+			<!--帮助代码结束-->
+			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<!--客服代码开始-->
+			<div class="left_box bgcolor_left left_bg_help">
+				<div class="left_help_service"></div>
+				<div class="left_help_wid">
+					<table width="95%" border="0" cellpadding="0" cellspacing="0">
+					    <tr>
+							<td class="fontcolor" rowspan="3"><div class="left_box topimg2">&nbsp;</div></td><td>&nbsp;</td>
+							<td class="fontcolor right left_service_color" align="left" width="160">免费咨询热线:<br />400-400-400400400</td>
+						</tr>
+					    <tr>
+							<td>&nbsp;</td>
+							<td class="fontcolor right left_service_color" align="left">免费咨询热线:<br />400-400-400400400</td>
+						</tr>
+					    <tr>
+							<td>&nbsp;</td>
+							<td class="fontcolor right left_service_color" align="left">免费咨询热线:<br />400-400-400400400</td>
+						</tr>
+				  </table>
+				</div>
+			</div>
+			<!--客服代码结束-->
+		</div>
+	  <!--左部文件结束-->
+	  </td>
+      <td valign="top">
+			<div class="left_box bgcolor_left index_bg">
+				<div class="left_bg"></div>
+				<div class="left_top">
+					<table id="table_t" cellpadding="0" cellspacing="0">
+					    <tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+				  </table>
+				</div>
+			</div>		
+	  </td>
+    </tr>
+  </table>
+</div>
