--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -48,8 +48,63 @@ width:85%; border:0px; line-height:20px;
 .height_t{height:7px;}
 .topimg {text-align:left;background:url(/user{{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
 .topimg2 {text-align:left;background:url(/user{{$STATIC}}images/customer_head.jpg) 0px no-repeat;line-height:82px;height:82px;width:82px;}
+.left_dns {text-align:left;background:url(/user{{$STATIC}}images/l_dns.jpg) 0px no-repeat;height:121px;width:262px;}
+.left_vip {text-align:left;background:url(/user{{$STATIC}}images/l_vip.jpg) 0px no-repeat;height:121px;width:262px;}
+.left_beiban {text-align:left;background:url(/user{{$STATIC}}images/l_beian.jpg) 0px no-repeat;height:93px;width:262px;}
 .left_service_color{color:red;}
+
+/*幻灯片*/
+.picshow { z-index:444; position:relative; background-color:#e4f2fa; width: 100%; height: 208px}
+.picshow_main {	position: relative; width: 261px; height: 208px}
+.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 261px; height: 208px}
+.picshow_change {position: absolute; text-align: left; bottom: -5px; height: 30px; right: 0px; left: 150px;}
+.picshow_change img {width:20px; height: 15px}
+.picshow_change a {	border: 1px solid; display: block; float: left; margin-right: 5px;  -display: inline}
+.picshow_active {display:block}
+.picshow_unactive {display:none}
+a.axx {	border-color: #555}
+a.axx:hover {border-color: #000}
+a.axx img {	filter: alpha(opacity=40); opacity: 0.4; -moz-opacity: 0.4}
+a.axx:hover img {filter: alpha(opacity=100); opacity: 1.0; -moz-opacity: 1.0}
+a.bxx {	border-color: #000}
+a.bxx:hover {border-color: #000}
+img{margin:0;padding:0;border:0;}
 </style>
+<!--幻灯片script代码开始-->
+<script language="javascript">
+	//图片滚动展示 Start
+	var counts = 4;
+	//大图
+	var nn = 1;
+	var key = 0;
+	function change_img() {		
+
+		for ( var i = 1; i <= counts; i++) {
+			document.getElementById("picdiv" + i).className = 'picshow_unactive';
+		}
+		
+		document.getElementById("picdiv" + nn).className = 'picshow_active';
+
+                if(document.getElementById("pic" + nn).src == "")
+  			document.getElementById("pic" + nn).src = document.getElementById("pic" + nn).getAttribute("src2");
+
+		for ( var i = 1; i <= counts; i++) {
+			document.getElementById("xxjdjj" + i).className = 'axx';
+		}
+		document.getElementById("xxjdjj" + nn).className = 'bxx';
+		nn++;
+		if (nn > counts) {
+			nn = 1;
+		}
+		tt = setTimeout('change_img()', 1000);
+	}
+	function changeimg(n) {
+		nn = n;
+		window.clearInterval(tt);
+		change_img();
+	}
+</script>
+<!--幻灯片script代码结束-->
 <div>
 	<table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
 	<form id="form1" name="form1" method="post" action="?c=session&a=login" >
