--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -4,6 +4,45 @@
       <td valign="top">
 	  <!--左部文件开始-->
 	  	<div class="left_main">
+			<!--幻灯片代码开始-->
+			<div class="left_box bgcolor_left">
+				<table border="0" cellpadding="0" cellspacing="0" width="262">
+					<tr>
+						<td valign="top">
+							<div class="picshow_main" style="z-index:10">
+								<div id="picdiv1">
+								  <a id="url1" href="kangle_content.php">
+									<img id="pic1" class="imgbig" src="/user{{$STATIC}}images/vip.jpg" alt="kangle web服务器" border="0">
+								  </a>
+								</div>
+								<div id="picdiv2">
+								<a id="url2" href="proxy_content.php">
+									<img id="pic2" class="imgbig" src="/user{{$STATIC}}images/vip2.jpg" alt="kangle 代理服务器" border="0"></a>
+								</div>
+								<div id="picdiv3">
+								  <a id="url3" href="easy_content.php">
+									<img id="pic3" class="imgbig" src="/user{{$STATIC}}images/vip3.jpg" alt="easypanel虚拟主机控制面板" border="0">
+								  </a>  
+								</div>
+								<div id="picdiv4">
+								  <a id="url4" href="vhms_content.php">
+									<img id="pic4" class="imgbig" src="/user{{$STATIC}}images/vip4.jpg" alt="kangle虚拟主机管理系统" border="0">
+								  </a>  
+								</div>
+
+								<div class="picshow_change">
+								  <a href="javascript:changeimg(1);" id="xxjdjj1"><img src="/user{{$STATIC}}images/index_adb1.gif"></a>
+								  <a href="javascript:changeimg(2);" id="xxjdjj2"><img src="/user{{$STATIC}}images/index_adb2.gif"></a>
+								  <a href="javascript:changeimg(3);" id="xxjdjj3"><img src="/user{{$STATIC}}images/index_adb3.gif"></a>
+								  <a href="javascript:changeimg(4);" id="xxjdjj4"><img src="/user{{$STATIC}}images/index_adb4.gif"></a>
+								</div>
+							</div>
+							<script>change_img();</script>
+						</td>
+					</tr>
+				</table>
+			</div>
+			<!--幻灯片代码结束-->
 			<!--公告代码开始-->
 			<div class="left_box bgcolor_left index_bg">
 				<div class="left_bg"></div>
@@ -47,6 +86,10 @@
 			</div>
 			<!--帮助代码结束-->
 			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<!--备案图片结束-->
+			<div class="bgcolor_left left_bg_help left_beiban"></div>
+			<!--备案图片结束-->
+			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
 			<!--客服代码开始-->
 			<div class="left_box bgcolor_left left_bg_help">
 				<div class="left_help_service"></div>
@@ -54,38 +97,44 @@
 					<table width="95%" border="0" cellpadding="0" cellspacing="0">
 					    <tr>
 							<td class="fontcolor" rowspan="3"><div class="left_box topimg2">&nbsp;</div></td><td>&nbsp;</td>
-							<td class="fontcolor right left_service_color" align="left" width="160">免费咨询热线:<br />400-400-400400400</td>
+							<td class="fontcolor right" align="left" width="160">免费咨询热线:<br />400-400-400400400</td>
 						</tr>
 					    <tr>
 							<td>&nbsp;</td>
-							<td class="fontcolor right left_service_color" align="left">免费咨询热线:<br />400-400-400400400</td>
+							<td class="fontcolor right" align="left">免费咨询热线:<br />400-400-400400400</td>
 						</tr>
 					    <tr>
 							<td>&nbsp;</td>
-							<td class="fontcolor right left_service_color" align="left">免费咨询热线:<br />400-400-400400400</td>
+							<td class="fontcolor right" align="left">免费咨询热线:<br />400-400-400400400</td>
 						</tr>
 				  </table>
 				</div>
 			</div>
 			<!--客服代码结束-->
+			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<!--左下角图片开始-->
+			<div class="left_box bgcolor_left left_bg_help left_dns"></div>
+			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<div class="left_box bgcolor_left left_bg_help left_vip"></div>
+			<!--左下角图片结束-->
 		</div>
 	  <!--左部文件结束-->
 	  </td>
       <td valign="top">
-			<div class="left_box bgcolor_left index_bg">
-				<div class="left_bg"></div>
-				<div class="left_top">
-					<table id="table_t" cellpadding="0" cellspacing="0">
-					    <tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-				  </table>
-				</div>
-			</div>		
+		<div class="left_box bgcolor_left index_bg">
+			<div class="left_bg"></div>
+			<div class="left_top">
+				<table id="table_t" cellpadding="0" cellspacing="0">
+					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+			  </table>
+			</div>
+		</div>		
 	  </td>
     </tr>
   </table>
