--- a/user/view/default/style/style.css
+++ b/user/view/default/style/style.css
@@ -1,5 +1,6 @@
 /* 瀹氫箟鍏ㄥ眬鍙橀噺 */
 body {
+/*
 scrollbar-face-color:#DEF2FC;
 scrollbar-arrow-color:#000000;
 scrollbar-highlight-color:#FFFFFF;
@@ -7,6 +8,7 @@ scrollbar-3dlight-color:#FFFFFF;
 scrollbar-shadow-color:#FFFFFF;
 scrollbar-darkshadow-color:#FFFFFF;
 scrollbar-track-color:#FFFFFF;
+*/
 margin: 0px;
 font-size:12px;
 line-height:150%;
