--- a/user/view/default/frame/controltop.html
+++ b/user/view/default/frame/controltop.html
@@ -109,7 +109,7 @@ function shift_status()
 </script>
 </HEAD>
 
-<BODY onclick="shift_status()" leftmargin=0 topmargin=0 onLoad="restoreLocale()"  bgcolor="#DCDCDC">
+<BODY onclick="shift_status()" leftmargin=0 topmargin=0   bgcolor="#DCDCDC">
 <span class="cacher" id="cacheData" name="cacheData"></span>
 <table width="100%" height="9" border=0 cellpadding="0" cellspacing="0">
 	<tr>
