--- a/admin/view/default/controlleft.html
+++ b/admin/view/default/controlleft.html
@@ -109,7 +109,7 @@ function shift_status()
 </script>
 </HEAD>
 
-<BODY onclick="shift_status()" leftmargin=0 topmargin=0 onLoad="restoreLocale()" bgcolor="#DCDCDC">
+<BODY onclick="shift_status()" leftmargin=0 topmargin=0  bgcolor="#DCDCDC">
 <span class="cacher" id="cacheData" name="cacheData"></span>
 <table border=0 height="100%" cellspacing="0" cellpadding="0">
 	<tr>
