--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -6,15 +6,13 @@ a:visited {color: #003366;text-decoration: none;}
 a:hover {color: #FCFCFD;text-decoration: underline;}
 a:active {color: #2583EA;text-decoration: none;}
 .right {text-align:left;padding-left:10px;}
+.right_r{text-align:left;padding-left:40px;}
 .white  {color: #FFFFFF}
 .right_r {text-align:left;padding-right:5px;}
-td {
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 14px;
-}
+td {font-family: Arial, Helvetica, sans-serif;font-size: 14px;}
 .fl_le{ float:left}
 .fl_ri{ float:right}
-.foot{background-image:url(/user{{$STATIC}}images/footbg.jpg); background-repeat:repeat-x; width:960px;margin:0 auto; margin-bottom:6px; height:350px;}
+.foot{background-image:url(/user{{$STATIC}}images/footbg.jpg); background-repeat:repeat-x; width:965px;margin:0 auto; margin-bottom:6px; height:150px;}
 .foot .footmid{ width:950px; float:left;}
 .foot .link .wordlink{float:left;margin-top:30px; width:100%; color:#ccc; height:38px;}
 .foot .link .wordlink span{ color:#ea6210}
@@ -22,21 +20,14 @@ td {
 .foot .link .wordlink span a{margin-left:20px; margin-right:20px; color:#999999; text-decoration:none}
 .foot .link .wordlink span a:hover,.foot .link .wordlink a:hover { color: #FF6600;text-decoration:underline}
 
-.left_box {
-	BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #C2C2C2 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;
-}
-.Left_main {
-	FLOAT: left; WIDTH: 263px;
-}
-.bgcolor_left{
-background-color:#E0E0E0;
-}
-.bgcolor_left2{
-background-color:#ffffff;
-}
-#table_t {
-width:85%; border:0px; line-height:20px;
-}
+.left_box {BORDER-RIGHT: #C2C2C2 1px solid; BORDER-TOP: #C2C2C2 1px solid; BACKGROUND: #fafcff; MARGIN: 0px 0px 6px; BORDER-LEFT: #C2C2C2 1px solid; BORDER-BOTTOM: #C2C2C2 1px solid;}
+.Left_main {FLOAT: left; WIDTH: 263px;}
+.right_main {FLOAT: left; margin-left:5px;}
+.bgcolor_left{background-color:#E0E0E0;}
+.bgcolor_left2{background-color:#ffffff;}
+#table_t {width:85%; border:0px; line-height:20px;}
+#table_r {width:100%; border:0px;}
+#table_rr {width:100%; border:0px; line-height:24px;}
 .index_bg{background-image:url(/user{{$STATIC}}images/box_tl3.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:223px;}
 .left_bg_help{background-image:url(/user{{$STATIC}}images/box_tl5.jpg); background-repeat:repeat-x; width:263px;margin:0 auto; margin-bottom:0px; height:160px;}
 .left_bg{background-image:url(/user{{$STATIC}}images/ne_1.jpg); background-repeat:repeat-x; width:74px; margin-top:7px; margin-left:10px; height:26px;}
@@ -48,16 +39,25 @@ width:85%; border:0px; line-height:20px;
 .height_t{height:7px;}
 .topimg {text-align:left;background:url(/user{{$STATIC}}images/help_1.jpg) 0px no-repeat;line-height:22px;padding-left:30px;}
 .topimg2 {text-align:left;background:url(/user{{$STATIC}}images/customer_head.jpg) 0px no-repeat;line-height:82px;height:82px;width:82px;}
-.left_dns {text-align:left;background:url(/user{{$STATIC}}images/l_dns.jpg) 0px no-repeat;height:121px;width:262px;}
-.left_vip {text-align:left;background:url(/user{{$STATIC}}images/l_vip.jpg) 0px no-repeat;height:121px;width:262px;}
-.left_beiban {text-align:left;background:url(/user{{$STATIC}}images/l_beian.jpg) 0px no-repeat;height:93px;width:262px;}
+.left_dns {height:118px;width:262px;}
+.left_vip {height:121px;width:262px;}
+.left_beiban {height:93px;width:262px;}
 .left_service_color{color:red;}
+.right_top{padding-top:0px;padding-right:0px;}
+.topimg3 {text-align:left;background:url(/user{{$STATIC}}images/dmain.jpg) 0px no-repeat;line-height:82px;height:223px;width:689px;}
+.host_bg {text-align:left;background:url(/user{{$STATIC}}images/r_zj.jpg) 0px no-repeat;line-height:82px;height:257px;width:689px;}
+.color_red{color:#FF0000;}
+.color_orange{color:#D7631A;}
+.right_hg{height:30px;}
+.right_wid{ width:33%}
+
+
 
 /*幻灯片*/
-.picshow { z-index:444; position:relative; background-color:#e4f2fa; width: 100%; height: 208px}
-.picshow_main {	position: relative; width: 261px; height: 208px}
-.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 261px; height: 208px}
-.picshow_change {position: absolute; text-align: left; bottom: -5px; height: 30px; right: 0px; left: 150px;}
+.picshow { z-index:444; position:relative; background-color:#e4f2fa; width: 100%; height: 221px}
+.picshow_main {	position: relative; width: 261px; height: 221px}
+.picshow_main .imgbig {	filter: progid:dximagetransform.microsoft.wipe(gradientsize=1.0,wipestyle=4, motion=forward); width: 261px; height: 221px}
+.picshow_change {position: absolute; text-align: left; bottom: -5px; height: 27px; right: 0px; left: 150px;}
 .picshow_change img {width:20px; height: 15px}
 .picshow_change a {	border: 1px solid; display: block; float: left; margin-right: 5px;  -display: inline}
 .picshow_active {display:block}
@@ -105,8 +105,9 @@ img{margin:0;padding:0;border:0;}
 	}
 </script>
 <!--幻灯片script代码结束-->
+<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 <div>
-	<table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
+	<table width="965" border="0" cellpadding="0" cellspacing="0" align="center">
 	<form id="form1" name="form1" method="post" action="?c=session&a=login" >
 	  <tr>
 		<td width="184" rowspan="2"><img src='/user{{$STATIC}}/images/logo.jpg' height="80"></td>
