--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -1,7 +1,7 @@
 <div>
-  <table width="960" border="0" cellpadding="0" cellspacing="0" align="center">
+  <table width="970" border="0" cellpadding="0" cellspacing="0" align="center">
     <tr>
-      <td valign="top">
+      <td valign="top" width="262">
 	  <!--左部文件开始-->
 	  	<div class="left_main">
 			<!--幻灯片代码开始-->
@@ -11,30 +11,30 @@
 						<td valign="top">
 							<div class="picshow_main" style="z-index:10">
 								<div id="picdiv1">
-								  <a id="url1" href="kangle_content.php">
-									<img id="pic1" class="imgbig" src="/user{{$STATIC}}images/vip.jpg" alt="kangle web服务器" border="0">
+								  <a id="url1" href="#">
+									<img id="pic1" class="imgbig" src="/user{{$STATIC}}images/vip.jpg" alt="kangle 虚拟主机管理前台" border="0">
 								  </a>
 								</div>
 								<div id="picdiv2">
-								<a id="url2" href="proxy_content.php">
-									<img id="pic2" class="imgbig" src="/user{{$STATIC}}images/vip2.jpg" alt="kangle 代理服务器" border="0"></a>
+								<a id="url2" href="#">
+									<img id="pic2" class="imgbig" src="/user{{$STATIC}}images/vip2.jpg" alt="kangle 虚拟主机管理前台" border="0"></a>
 								</div>
 								<div id="picdiv3">
-								  <a id="url3" href="easy_content.php">
-									<img id="pic3" class="imgbig" src="/user{{$STATIC}}images/vip3.jpg" alt="easypanel虚拟主机控制面板" border="0">
+								  <a id="url3" href="#">
+									<img id="pic3" class="imgbig" src="/user{{$STATIC}}images/vip3.jpg" alt="kangle 虚拟主机管理前台" border="0">
 								  </a>  
 								</div>
 								<div id="picdiv4">
-								  <a id="url4" href="vhms_content.php">
-									<img id="pic4" class="imgbig" src="/user{{$STATIC}}images/vip4.jpg" alt="kangle虚拟主机管理系统" border="0">
+								  <a id="url4" href="#">
+									<img id="pic4" class="imgbig" src="/user{{$STATIC}}images/vip4.jpg" alt="kangle 虚拟主机管理前台" border="0">
 								  </a>  
 								</div>
 
 								<div class="picshow_change">
-								  <a href="javascript:changeimg(1);" id="xxjdjj1"><img src="/user{{$STATIC}}images/index_adb1.gif"></a>
-								  <a href="javascript:changeimg(2);" id="xxjdjj2"><img src="/user{{$STATIC}}images/index_adb2.gif"></a>
-								  <a href="javascript:changeimg(3);" id="xxjdjj3"><img src="/user{{$STATIC}}images/index_adb3.gif"></a>
-								  <a href="javascript:changeimg(4);" id="xxjdjj4"><img src="/user{{$STATIC}}images/index_adb4.gif"></a>
+								  <a href="javascript:changeimg(1);" id="xxjdjj1"><img src="/user{{$STATIC}}images/index_adb1.gif" border="0"></a>
+								  <a href="javascript:changeimg(2);" id="xxjdjj2"><img src="/user{{$STATIC}}images/index_adb2.gif" border="0"></a>
+								  <a href="javascript:changeimg(3);" id="xxjdjj3"><img src="/user{{$STATIC}}images/index_adb3.gif" border="0"></a>
+								  <a href="javascript:changeimg(4);" id="xxjdjj4"><img src="/user{{$STATIC}}images/index_adb4.gif" border="0"></a>
 								</div>
 							</div>
 							<script>change_img();</script>
@@ -47,7 +47,7 @@
 			<div class="left_box bgcolor_left index_bg">
 				<div class="left_bg"></div>
 				<div class="left_top">
-					<table id="table_t" cellpadding="0" cellspacing="0">
+					<table cellpadding="0" cellspacing="0" id="table_t">
 					    <tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
 						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
 						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
@@ -59,7 +59,7 @@
 				</div>
 			</div>
 			<!--公告代码结束-->
-			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--帮助代码开始-->
 			<div class="left_box bgcolor_left left_bg_help">
 				<div class="left_help_img"></div>
@@ -85,15 +85,15 @@
 				</div>
 			</div>
 			<!--帮助代码结束-->
-			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--备案图片结束-->
-			<div class="bgcolor_left left_bg_help left_beiban"></div>
+			<div class="bgcolor_left left_bg_help left_beiban"><a href="#"><img src="/user{{$STATIC}}images/l_beian.jpg" border="0"/></a></div>
 			<!--备案图片结束-->
-			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--客服代码开始-->
 			<div class="left_box bgcolor_left left_bg_help">
 				<div class="left_help_service"></div>
-				<div class="left_help_wid">
+				   <div class="left_help_wid">
 					<table width="95%" border="0" cellpadding="0" cellspacing="0">
 					    <tr>
 							<td class="fontcolor" rowspan="3"><div class="left_box topimg2">&nbsp;</div></td><td>&nbsp;</td>
@@ -107,34 +107,90 @@
 							<td>&nbsp;</td>
 							<td class="fontcolor right" align="left">免费咨询热线:<br />400-400-400400400</td>
 						</tr>
-				  </table>
-				</div>
-			</div>
+				    </table>
+				   </div>
+			 </div>
 			<!--客服代码结束-->
-			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
+			<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			<!--左下角图片开始-->
-			<div class="left_box bgcolor_left left_bg_help left_dns"></div>
+			<div class="left_box bgcolor_left left_bg_help left_dns"><a href="#"><img src="/user{{$STATIC}}images/l_dns.jpg" border="0"/></a></div>
 			<div class="height_t"><table width="100%" border="0"><tr><td height="5"></td></tr></table></div>
-			<div class="left_box bgcolor_left left_bg_help left_vip"></div>
+			<div class="left_box bgcolor_left left_bg_help left_vip"><a href="#"><img src="/user{{$STATIC}}images/l_vip.jpg" border="0"/></a></div>
 			<!--左下角图片结束-->
 		</div>
 	  <!--左部文件结束-->
 	  </td>
       <td valign="top">
-		<div class="left_box bgcolor_left index_bg">
-			<div class="left_bg"></div>
-			<div class="left_top">
-				<table id="table_t" cellpadding="0" cellspacing="0">
-					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-					<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
-			  </table>
+	 	 <!--右边代码开始-->
+	  	<!--右部虚拟主机开始-->
+			<div class="right_main">
+				<div class="right_top host_bg">
+					<table id="table_r" cellpadding="0" cellspacing="0">
+						<tr><td height="257" valign="top">
+							<table id="table_r" cellpadding="0" cellspacing="4">
+								<tr>
+									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+								</tr>
+								<tr>
+								  <td class="right_hg" align="center"><b>双线主机</b></td>
+								  <td class="right_hg" align="center"><b>双线主机</b></td>
+								  <td class="right_hg" align="center"><b>双线主机</b></td>
+								</tr>
+								<tr>
+								  <td class="right_hg right_wid" valign="top">
+									<table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+								  <td class="right_hg right_wid" valign="top">
+									<table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+								  <td class="right_hg right_wid" valign="top">
+									 <table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+							  </tr>
+							</table>
+						</td></tr>
+					</table>
+				</div>
 			</div>
-		</div>		
+		<!--右部虚拟主机结束-->	
+		<!--右边代码结束-->
 	  </td>
     </tr>
   </table>
