--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -105,7 +105,7 @@ img{margin:0;padding:0;border:0;}
 	}
 </script>
 <!--幻灯片script代码结束-->
-<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
+<div><table id="table_r"><tr><td height="3"></td></tr></table></div>
 <div>
 	<table width="965" border="0" cellpadding="0" cellspacing="0" align="center">
 	<form id="form1" name="form1" method="post" action="?c=session&a=login" >
