--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -49,6 +49,8 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 14px;}
 .color_red{color:#FF0000;}
 .color_orange{color:#D7631A;}
 .right_hg{height:30px;}
+.right_hg2{height:23px;}
+.right_hg3{height:36px;}
 .right_wid{ width:33%}
 
 
