--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -133,15 +133,15 @@
 									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
 								</tr>
 								<tr>
-								  <td class="right_hg" align="center"><b>双线主机</b></td>
-								  <td class="right_hg" align="center"><b>双线主机</b></td>
-								  <td class="right_hg" align="center"><b>双线主机</b></td>
+								  <td class="right_hg2" align="center"><b>双线主机</b></td>
+								  <td  align="center"><b>双线主机</b></td>
+								  <td align="center"><b>双线主机</b></td>
 								</tr>
 								<tr>
-								  <td class="right_hg right_wid" valign="top">
+								  <td class="right_wid" valign="top">
 									<table id="table_rr" cellpadding="0" cellspacing="0">
 										  <tr>
-											<td colspan="2" align="center" class="right_hg color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
 										  </tr>
 										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
 										  <tr><td class="right">IIS连接数：300 个</td></tr>
@@ -156,7 +156,7 @@
 								  <td class="right_hg right_wid" valign="top">
 									<table id="table_rr" cellpadding="0" cellspacing="0">
 										  <tr>
-											<td colspan="2" align="center" class="right_hg color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
 										  </tr>
 										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
 										  <tr><td class="right">IIS连接数：300 个</td></tr>
@@ -171,7 +171,7 @@
 								  <td class="right_hg right_wid" valign="top">
 									 <table id="table_rr" cellpadding="0" cellspacing="0">
 										  <tr>
-											<td colspan="2" align="center" class="right_hg color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
 										  </tr>
 										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
 										  <tr><td class="right">IIS连接数：300 个</td></tr>
