--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -128,7 +128,7 @@ img{margin:0;padding:0;border:0;}
 	  </tr>
 	  </form>
 	  <tr>
-	  	<td colspan="2" align="center">ad</td>
+	  	<td colspan="2" align="right"><a href="http://zh.kanglesoft.com"><img src="/user{{$STATIC}}images/ad.gif" border="0"></a></td>
 	  </tr>
 	  <tr>
 	  <tr>
