--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -55,6 +55,9 @@
 						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
 						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
 						<tr><td class="fontcolor">主机提供免费主机</td><td class="fontcolor">11/10/13</td></tr>
+						<tr><td rowspan="2" valign="middle" class="right_hg">
+							<a href="#"><img src="/user{{$STATIC}}images/box_tl4.jpg" border="0" /></a>
+						</td></tr>
 				  </table>
 				</div>
 			</div>
@@ -143,8 +146,8 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
 										  </tr>
-										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
-										  <tr><td class="right">IIS连接数：300 个</td></tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
 										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
 										  <tr><td class="right">子目录： 无</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
@@ -158,8 +161,8 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
 										  </tr>
-										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
-										  <tr><td class="right">IIS连接数：300 个</td></tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
 										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
 										  <tr><td class="right">子目录： 无</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
@@ -173,8 +176,8 @@
 										  <tr>
 											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
 										  </tr>
-										  <tr><td class="right right_wid" width="60">网络流量：不限制</td></tr>
-										  <tr><td class="right">IIS连接数：300 个</td></tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
 										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
 										  <tr><td class="right">子目录： 无</td></tr>
 										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
@@ -188,6 +191,150 @@
 						</td></tr>
 					</table>
 				</div>
+				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
+			</div>
+		<!--右部虚拟主机结束-->	
+		
+		
+	  	<!--右部虚拟主机开始-->
+			<div class="right_main">
+				<div class="right_top host_bg">
+					<table id="table_r" cellpadding="0" cellspacing="0">
+						<tr><td height="257" valign="top">
+							<table id="table_r" cellpadding="0" cellspacing="4">
+								<tr>
+									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+								</tr>
+								<tr>
+								  <td class="right_hg2" align="center"><b>双线主机</b></td>
+								  <td  align="center"><b>双线主机</b></td>
+								  <td align="center"><b>双线主机</b></td>
+								</tr>
+								<tr>
+								  <td class="right_wid" valign="top">
+									<table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+								  <td class="right_hg right_wid" valign="top">
+									<table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+								  <td class="right_hg right_wid" valign="top">
+									 <table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+							  </tr>
+							</table>
+						</td></tr>
+					</table>
+				</div>
+				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
+			</div>
+		<!--右部虚拟主机结束-->	
+		
+		
+		
+			<!--右部虚拟主机开始-->
+			<div class="right_main">
+				<div class="right_top host_bg">
+					<table id="table_r" cellpadding="0" cellspacing="0">
+						<tr><td height="257" valign="top">
+							<table id="table_r" cellpadding="0" cellspacing="4">
+								<tr>
+									<td  class="right color_red right_hg"><b>双线普及型主机</b></td><td>&nbsp;</td>
+									<td class="right_hg" align="right"><span class="right_r"><a href="#"><img src="/user{{$STATIC}}images/r_fdh_01.jpg" border="0"/></a></span></td>
+								</tr>
+								<tr>
+								  <td class="right_hg2" align="center"><b>双线主机</b></td>
+								  <td  align="center"><b>双线主机</b></td>
+								  <td align="center"><b>双线主机</b></td>
+								</tr>
+								<tr>
+								  <td class="right_wid" valign="top">
+									<table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+								  <td class="right_hg right_wid" valign="top">
+									<table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+								  <td class="right_hg right_wid" valign="top">
+									 <table id="table_rr" cellpadding="0" cellspacing="0">
+										  <tr>
+											<td colspan="2" align="center" class="right_hg3 color_orange"><b>独立IP虚拟主机1G套餐</b></td>
+										  </tr>
+										  <tr><td class="right right_wid right_blue" width="60">网络流量：不限制</td></tr>
+										  <tr><td class="right right_blue">IIS连接数：300 个</td></tr>
+										  <tr><td class="right">支持：html,asp,aspx,php</td></tr>
+										  <tr><td class="right">子目录： 无</td></tr>
+										  <tr><td class="right">价格：<span class="color_red"><b>500元</b></span>/年</td></tr>
+										  <tr><td class="right_r" colspan="2"><a href="#"><img src="/user{{$STATIC}}images/r_btn01.jpg" border="0"/></a>&nbsp;&nbsp;
+										  	<a href="#"><img src="/user{{$STATIC}}images/r_btn02.jpg" border="0"/></a></td>
+										  </tr>
+									 </table>
+								  </td>
+							  </tr>
+							</table>
+						</td></tr>
+					</table>
+				</div>
+				<div class="height_t"><table id="table_r"><tr><td height="5"></td></tr></table></div>
 			</div>
 		<!--右部虚拟主机结束-->	
 		<!--右边代码结束-->
