--- a/user/view/default/public/head.html
+++ b/user/view/default/public/head.html
@@ -54,6 +54,7 @@ td {font-family: Arial, Helvetica, sans-serif;font-size: 13px;}
 .right_hg2{height:23px;}
 .right_hg3{height:36px;}
 .right_wid{ width:33%}
+.wid_menu{ width:970px}
 
 
 
@@ -109,8 +110,10 @@ img{margin:0;padding:0;border:0;}
 	}
 </script>
 <!--幻灯片script代码结束-->
+
 <div><table id="table_r"><tr><td height="3"></td></tr></table></div>
-<div>
+<div align="center">
+<div class="wid_menu">
 	<table width="965" border="0" cellpadding="0" cellspacing="0" align="center">
 	<form id="form1" name="form1" method="post" action="?c=session&a=login" >
 		<tr><td colspan="2">
@@ -152,7 +155,7 @@ img{margin:0;padding:0;border:0;}
       </tr>
 	</table>
 <div>
-
+</div>
 
 
 
