--- a/user/view/default/public/index.html
+++ b/user/view/default/public/index.html
@@ -1,4 +1,4 @@
-<div>
+<div class="wid_menu">
   <table width="970" border="0" cellpadding="0" cellspacing="0" align="center">
     <tr>
       <td valign="top" width="262">
